--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Anupam Tripathi",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mongoose": "^6.8.4",
